<resources>
    <string name="app_name">SignMeUp</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_account_text">Have an account ? Click here</string>
    <string name="create_account">Create Account</string>
    <string name="disclaimer_text">I agree to the terms and conditions</string>
    <string name="username">Username</string>
    <string name="background_image">background image</string>
</resources>