<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/mainImageContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/background"
            android:contentDescription="@string/background_image"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/main_container_width"
            android:layout_height="@dimen/main_container_height"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_huge"
            android:layout_marginEnd="@dimen/spacing_normal"
            app:cardCornerRadius="@dimen/spacing_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailInput"
                    style="@style/InputComponent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_component_height"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:layout_marginEnd="@dimen/input_component_margin_end"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/usernameInput"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/subheading_margin_top"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@+id/passwordInput"
                    app:layout_constraintTop_toBottomOf="@+id/emailInput" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/usernameInput"
                    style="@style/InputComponent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_component_height"
                    android:layout_marginStart="@dimen/input_component_margins_start"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:layout_marginEnd="@dimen/input_component_margin_end"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/subheading_margin_top"
                    android:text="@string/email_address"
                    app:layout_constraintStart_toStartOf="@+id/emailInput"
                    app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

                <TextView
                    android:id="@+id/title"
                    style="@style/MainHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordInput"
                    style="@style/InputComponent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/input_component_height"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:layout_marginEnd="@dimen/input_component_margin_end"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/emailInput"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/existingAccountText"
                    style="@style/Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/existing_account_margin_top"
                    android:text="@string/existing_account_text"
                    android:textSize="@dimen/text_size_xsmall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/createAccountButton"
                    app:layout_constraintStart_toStartOf="@+id/createAccountButton"
                    app:layout_constraintTop_toBottomOf="@+id/createAccountButton"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/createAccountButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginStart="@dimen/input_component_margins_start"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/input_component_margin_end"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_size_body"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/termsAndConditionsAgreement" />

                <CheckBox
                    android:id="@+id/termsAndConditionsAgreement"
                    style="@style/Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/terms_and_conditions_agreement_height"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:text="@string/disclaimer_text"
                    app:layout_constraintStart_toStartOf="@+id/passwordInput"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Subheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/subheading_margin_top"
                    android:text="@string/username"
                    app:layout_constraintStart_toStartOf="@+id/usernameInput"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>